waybar/.config/waybar/style.css
@import "mocha.css";
* {
  /* `otf-font-awesome` is required to be installed for icons */
  font-family:
    CaskaydiaCove Nerd Font,
    FontAwesome,
    Roboto,
    Helvetica,
    Arial,
    sans-serif;
  font-size: 13px;
  font-weight: bold;
  color: @mauve;
}

window#waybar {
  background-color: rgba(36, 39, 58, 0.8);
  transition-property: background-color;
  transition-duration: 0.5s;
  border-top: 2px solid rgba(0, 0, 0, 0);
  border-bottom: 2px solid rgba(0, 0, 0, 0);
}

window#waybar.hidden {
  opacity: 0.2;
}

button {
  /* Use box-shadow instead of border so the text isn't offset */
  /* Avoid rounded borders under each button name */
  border: none;
  border-radius: 0;
  border-top: 2px solid rgba(0, 0, 0, 0);
  border-bottom: 2px solid rgba(0, 0, 0, 0);
}

/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
button:hover {
  background: inherit;
  border: none;
}

#workspaces button:hover {
  all: unset;
  padding: 0 4px;
}
#workspaces button {
  padding: 0 4px;
  transition: none;
  animation: none;
}
#workspaces label {
  margin: 0 5px;
  /* background-color: rgba(0, 0, 0, 0); */
}
#workspaces label:active {
  padding: 0 5px;
  background-color: #000;
}

#workspaces button:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

#workspaces button.focused,
#workspaces button.active {
  all: unset;
  padding: 0 4px;
  background-color: rgba(255, 255, 255, 0.1);
  border-bottom: 2px solid #64727d;
  border-top: 2px solid #3a3e50;
}

#mode {
  background-color: #64727d;
}

#pulseaudio,
#network,
#memory,
#cpu,
#battery,
#clock {
  padding: 0 10px;
  margin: 0 1px;
}

/* you can set a style on hover for any module like this */
#pulseaudio:hover,
#network:hover,
#memory:hover,
#cpu:hover,
#battery:hover,
#clock:hover {
  background-color: #3d2c77;
}

/* If workspaces is the leftmost module, omit left margin */
.modules-left > widget:first-child > #workspaces {
  margin-left: 0;
}

/* If workspaces is the rightmost module, omit right margin */
.modules-right > widget:last-child > #workspaces {
  margin-right: 0;
}

#language {
  min-width: 16px;
}

#keyboard-state {
  min-width: 16px;
}

#privacy {
  padding: 0;
}

#privacy-item {
  /* padding: 0 5px; */
  /* color: white; */
}

#privacy-item.screenshare {
  /* background-color: #cf5700; */
}

#privacy-item.audio-in {
  /* background-color: #1ca000; */
}

#privacy-item.audio-out {
  /* background-color: #0069d4; */
}

